--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
           <h3 class="modal__title modal__title--about">Here's a bit more about me.</h3>
           <h4 class="modal__sub-title modal__sub-title--about">Front End Developer</h4>
           <p class="modal__para">
-            Lorem ipsum dolor sit amet <b class="salmon">consectetur</b> adipisicing elit. Quasi <b class="salmon">laboriosam</b> nemo repellendus hic culpa impedit dignissimos, quibusdam veniam vel <b class="salmon">maiores</b>!
+            <b id="modal_aboutmeparagraf"> Lorem ipsum dolor sit amet <b class="salmon">consectetur</b> adipisicing elit. Quasi <b class="salmon">laboriosam</b> nemo repellendus hic culpa impedit dignissimos, quibusdam veniam vel <b class="salmon">maiores</b>!</b>
             <br>
             Lorem, <b class="salmon">ipsum dolor</b> sit amet consectetur adipisicing elit. Molestiae corrupti a quam <b class="salmon">deleniti rem</b> temporibus inventore magnam eligendi <b class="salmon">quae enim</b> tempora ipsum <b class="salmon">voluptatibus laboriosam</b> ad eveniet earum, voluptatum sint dolores!
           </p>
