--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
       <div class="container">
         <div class="row">
           <h1 class="section__title">
-            Here are some of <b class="salmon">projects</b>
+            Here are some of my <b class="salmon">projects</b>
           </h1>
           
           <ul class="project__list">
