--- a/index.html
+++ b/index.html
@@ -173,23 +173,23 @@
       <div class="container">
         <div class="row">
           <h1 class="section__title">
-            Here are some of my <b class="salmon">projects</b>
+            Here are some of <b class="salmon">projects</b>
           </h1>
           
           <ul class="project__list">
             <li class="project">
               <div class="project__wrapper">
-                <img src="./media/assets/blinker mockup.png" class="project__img" alt="">
+                <img src="./media/media/TCLibrary home.png" class="project__img" alt="">
                 <div class="project__wrapper--bg"></div>
                 <div class="project__description">
                   <h3 class="project__description--title">
-                    Dummy website
+                    TC Library
                   </h3>
                   <h4 class="project__description--sub-title">
-                    Html, Css, JavaScript, Tailwind, React
+                    Html, Css, JavaScript
                   </h4>
                   <p class="project__description--para">
-                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corporis obcaecati sequi deleniti, eveniet eaque asperiores ipsum iusto, beatae maxime quia enim? Quam expedita dolorum tempora tenetur optio saepe blanditiis maiores.
+                    Im happy how this page turned out, even tought it might not be as impressive CSS wise as my portifolio page I have used advanced JavaScript that makes this page quite interesting.
                   </p>
                   <div class="project__description--links">
                     <a href="https://github.com/TomasxQ" class="project__description--link">
@@ -197,6 +197,9 @@
                     </a>
                     <a href="https://www.linkedin.com/in/tomas-corrales-a890b4229/" class="project__description--link">
                       <i class="fab fa-linkedin-in"></i>
+                    </a>
+                    <a href="/projects/TCLibrary/index.html" target="_blank" class="project__description--link">
+                      <i class="fas fa-link"></i>
                     </a>
                   </div>
                   
