--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
                     <a href="https://www.linkedin.com/in/tomas-corrales-a890b4229/" class="project__description--link">
                       <i class="fab fa-linkedin-in"></i>
                     </a>
-                    <a href="/projects/TCLibrary/index.html" target="_blank" class="project__description--link">
+                    <a href="tomasxq.github.io/TCLibrary/" target="_blank" class="project__description--link">
                       <i class="fas fa-link"></i>
                     </a>
                   </div>
