--- a/index.html
+++ b/index.html
@@ -99,9 +99,10 @@
           <h3 class="modal__title modal__title--about">Here's a bit more about me.</h3>
           <h4 class="modal__sub-title modal__sub-title--about">Front End Developer</h4>
           <p class="modal__para">
-            <b id="modal_aboutmeparagraf"> Lorem ipsum dolor sit amet <b class="salmon">consectetur</b> adipisicing elit. Quasi <b class="salmon">laboriosam</b> nemo repellendus hic culpa impedit dignissimos, quibusdam veniam vel <b class="salmon">maiores</b>!</b>
+            I'm Tomas Corrales a developer based in <b class="salmon">Mallorca</b>, Spain. I've some <b class="salmon">background</b> in  <b class="salmon">building websites</b> since I'm currently coursing and finishing a 2 year course called ASIR.
             <br>
-            Lorem, <b class="salmon">ipsum dolor</b> sit amet consectetur adipisicing elit. Molestiae corrupti a quam <b class="salmon">deleniti rem</b> temporibus inventore magnam eligendi <b class="salmon">quae enim</b> tempora ipsum <b class="salmon">voluptatibus laboriosam</b> ad eveniet earum, voluptatum sint dolores!
+            For the past 6 months I've <b class="salmon">learned by myself</b> Frontend Web Development since that's <b class="salmon">where my passion is at</b>.          
+            The technologies I use the most are HTML, CSS and JS however I've used PHP, React and Tailwind aswell.
           </p>
           <div class="modal__languages">
             <figure class="modal__language">
