--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           <div class="social__list">
             <a
               target="_blank"
-              href="https://www.linkedin.com/in/tomas-corrales-a890b4229/"
+              href="https://www.linkedin.com/in/tomás-corrales-a890b4229/"
               class="social__link click"
             >
               <i class="fab fa-linkedin-in"></i>
@@ -79,7 +79,7 @@
             >
               <i class="fab fa-github"></i>
             </a>
-            <a target="_blank" download href="" class="social__link click">
+            <a target="assets/TCorrales_CV.pdf" download href="" class="social__link click">
               <i class="fas fa-file-pdf"></i>
             </a>
           </div>
