--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             >
               <i class="fab fa-github"></i>
             </a>
-            <a target="_blank" download href="./assets/TCorrales_CV" class="social__link click">
+            <a target="_blank" download href="./assets/TCorrales_CV.pdf" class="social__link click">
               <i class="fas fa-file-pdf"></i>
             </a>
           </div>
