--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
        emailjs.init("NhqzhholjV78iLxsf");
       })();
     </script>
+    <link rel="shortcut icon" href="./assets/logo.PNG" type="image/x-icon">
   </head>
   <body>
     <section id="landing-page" onmousemove="moveBackground(event)">
